# $Id$

2006-03-26	Konstantin V. Arkhipov

	* doc/THANKS: for various suggestions, critics, patches, etc.

	* doc/AUTHORS: all email addresses moved to single file.

	* core/Exceptions/MissingElementException.class.php: closing
	exception's TODO item by removing abuse of ObjectNotFoundException
	mostly.

	* global.inc.php.tpl: throw exceptions on E_STRICT violations too.

	* main/Flow/Model.class.php: deprecated 'Var'-suffixed methods.

	* core/OSQL/QueryIdentification.class.php: now implements Stringable
	for debugging purposes.

	* core/Base/Singletone.class.php: dropped in the sake of sanity.

	* main/DAOs/SmartDaoWorker.class.php,
	main/DAOs/VoodooDaoWorker.class.php,
	core/Cache/WatermarkedPeer.class.php: implemented ability to avoid
	project's namespace in-cache collisions by watermarking all cache'
	activity.

2006-03-13	Konstantin V. Arkhipov

	* meta/classes/: fixed indentation issues, now 100% compatible with
	our coding style standarts.

	* core/OSQL/DialectString.class.php: toString() renamed to
	toDialectString(), to avoid collision with Stringable interface.

2006-03-12	Konstantin V. Arkhipov

	* meta/: proto classes implementation finished.

	* core/Form/FormUtils.class.php: import/export utilities, extracted
	from Form.

	* core/Form/Form.class.php: ability to scope's cleanup dropped;
	method primitiveExist renamed to primitiveExists;

2006-03-09	Anton E. Lebedevich

	* main/Flow/: initial import.

2006-03-09	Konstantin V. Arkhipov

	* meta/: creation of prototyped classes implemented.

	* core/Form/PrimitiveIdentifier.class.php: for resolving incapsulated
	objects.

	* core/Form/: two last primitives separated from factory file.

	* meta/: all formatting stuff moved to separate class.

	* 0.2.9 released.

2006-03-08	Konstantin V. Arkhipov

	* core/OSQL/DBValue.class.php: don't quote integer values.

2006-03-03	Konstantin V. Arkhipov

	* main/DAOs/VoodooDaoWorker.class.php,
	main/DAOs/SmartDaoWorker.class.php,