@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2006 by Anton E. Lebedevich                             *
+ *   Copyright (C) 2006 by Konstantin V. Arkhipov                          *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -8,31 +8,10 @@
  *   (at your option) any later version.                                   *
  *                                                                         *
  ***************************************************************************/
-/* $Id$ */
+/* $Id$ */	
 
-	/**
-	 * Calendar week representation.
-	 *
-	 * @ingroup Calendar
-	**/
-	class CalendarWeek implements Creatable
+	interface Creatable
 	{
-		// TODO: quite empty class, consider replacement or pull up all methods
-		private $days = array();
-		
-		public static function create()
-		{
-			return new self;
-		}
-		
-		public function getDays()
-		{
-			return $this->days;
-		}
-		
-		public function addDay(CalendarDay $day)
-		{
-			$this->days[$day->toDate()] = $day;
-		}
+		public static function create();
 	}
 ?>
