@@ -15,7 +15,7 @@
 	 * 
 	 * @ingroup OSQL
 	**/
-	class QueryResult implements Identifiable
+	class QueryResult implements Identifiable, Creatable
 	{
 		private $list		= array();
 		private $count		= null;
@@ -24,7 +24,7 @@
 		
 		public static function create()
 		{
-			return new QueryResult();
+			return new self;
 		}
 		
 		public function getId()
